# fourier-series

./: Cargo.toml  README.md
src/: main.rs
