[package]
name = "fourier_series"
version = "0.1.0"
authors = ["Joseph Banks <joseph@josephbanks.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
palette = "0.5"

[dependencies.sdl2]
version = "0.33"
default-features = false
features = ["gfx"]
